fixed social icons alignment

--- a/assets/sass/_theme/design-system/footer.sass
+++ b/assets/sass/_theme/design-system/footer.sass
@@ -113,7 +113,8 @@ footer#document-footer
                         @include icon(social-rss, after)
                     &::after
                         font-size: $footer-icons-size
-                        @include media-breakpoint-up(md)
+                        @include media-breakpoint-up(desktop)
+                            margin-right: half(-$spacing0)
                             padding-left: $spacing0
                     @include media-breakpoint-down(desktop)
                         width: fit-content
